Feat (eye detection)
Works fairly well, at this stage will work on improving and perhaps adding a second alternative.

--- a/face_detector.ipynb
+++ b/face_detector.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,11 @@
     "\n",
     "Yolo object detection:\n",
     "- https://pjreddie.com/darknet/yolo/\n",
-    "- https://medium.com/@luanaebio/detecting-people-with-yolo-and-opencv-5c1f9bc6a810"
+    "- https://medium.com/@luanaebio/detecting-people-with-yolo-and-opencv-5c1f9bc6a810\n",
+    "\n",
+    "OpenCV eye detection:\n",
+    "- https://github.com/stepacool/Eye-Tracker/blob/No_GUI/track.py\n",
+    "- https://medium.com/@stepanfilonov/tracking-your-eyes-with-python-3952e66194a6"
    ]
   },
   {
@@ -59,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,6 +279,91 @@
     "        yolo_pred = make_yolo_prediction(frame, yolo_net)\n",
     "        boxes, confidences, class_ids, class_id = get_bounding_box(classes, yolo_pred, frame)\n",
     "        frame = draw_yolo_result(frame, boxes, confidences, class_ids, class_id)\n",
+    "    return frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gaze Detection with OpenCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def initialize_eye_detector():\n",
+    "    detector_params = cv2.SimpleBlobDetector_Params()\n",
+    "    detector_params.filterByArea = True\n",
+    "    detector_params.maxArea = 1500\n",
+    "    detector = cv2.SimpleBlobDetector_create(detector_params)\n",
+    "    return cv2.CascadeClassifier('haarcascade_eye.xml'), detector\n",
+    "\n",
+    "def crop_face(img, x, y, w, h):\n",
+    "    return img[y:y + h, x:x + w]\n",
+    "\n",
+    "\n",
+    "def detect_eyes(img, cascade):\n",
+    "    gray_frame = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    eyes = cascade.detectMultiScale(gray_frame, 1.03, 5)  # detect eyes\n",
+    "    width = np.size(img, 1)  # get face frame width\n",
+    "    height = np.size(img, 0)  # get face frame height\n",
+    "    left_eye = None\n",
+    "    right_eye = None\n",
+    "    for (x, y, w, h) in eyes:\n",
+    "        if y > height / 2:\n",
+    "            pass\n",
+    "        eyecenter = x + w / 2  # get the eye center\n",
+    "        if eyecenter < width * 0.5:\n",
+    "            left_eye = img[y:y + h, x:x + w]\n",
+    "        else:\n",
+    "            right_eye = img[y:y + h, x:x + w]\n",
+    "        \n",
+    "        cv2.rectangle(img, (x, y), (x + w, y + h), (0, 0, 255), 2)\n",
+    "    \n",
+    "    return left_eye, right_eye\n",
+    "\n",
+    "\n",
+    "def cut_eyebrows(img):\n",
+    "    height, width = img.shape[:2]\n",
+    "    eyebrow_h = int(height / 4)\n",
+    "    img = img[eyebrow_h:height, 0:width]  # cut eyebrows out (15 px)\n",
+    "    return img\n",
+    "\n",
+    "\n",
+    "def blob_process(img, threshold, detector):\n",
+    "    gray_frame = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    _, img = cv2.threshold(gray_frame, threshold, 255, cv2.THRESH_BINARY)\n",
+    "    img = cv2.erode(img, None, iterations=2)\n",
+    "    img = cv2.dilate(img, None, iterations=4)\n",
+    "    img = cv2.medianBlur(img, 5)\n",
+    "    keypoints = detector.detect(img)\n",
+    "    return keypoints\n",
+    "\n",
+    "\n",
+    "def nothing(x):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "def eye_detection_main(frame, eye_cascade, face_locations, process_this_frame, blob_detect):\n",
+    "    if not process_this_frame:\n",
+    "        for (y, w, h, x) in face_locations:\n",
+    "            cropped_face = crop_face(frame, x*4, y*4, w*2, h) ## as done before in face recog display results\n",
+    "            if cropped_face is not None:\n",
+    "                eyes = detect_eyes(cropped_face, eye_cascade)\n",
+    "                threshold = r = cv2.getTrackbarPos('threshold', 'video')\n",
+    "                for eye in eyes:\n",
+    "                    if eye is not None:\n",
+    "                        eye = cut_eyebrows(eye)\n",
+    "                        keypoints = blob_process(eye, threshold, blob_detect)\n",
+    "                        eye = cv2.drawKeypoints(eye, keypoints, eye, (0, 0, 255),\n",
+    "                                                      cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
+    "                        \n",
     "    return frame"
    ]
   },
@@ -413,6 +502,7 @@
     "\n",
     "## Initializing the yolo net\n",
     "yolo_net = init_yolo()\n",
+    "eye_net, blob_detect = initialize_eye_detector()\n",
     "\n",
     "## Reading images\n",
     "list_of_files, number_files, names = read_images(path)\n",
@@ -432,6 +522,9 @@
     "\n",
     "classes = get_yolo_classes()\n",
     "\n",
+    "cv2.namedWindow('video')\n",
+    "cv2.createTrackbar('threshold', 'video', 0, 255, nothing)\n",
+    "\n",
     "while True:\n",
     "    # Grab a single frame of video\n",
     "    ret, frame = video_capture.read()\n",
@@ -448,17 +541,11 @@
     "                                                                   face_locations)\n",
     "    \n",
     "    frame = display_results(face_locations, face_names, frame)\n",
-    "    \n",
-    "    \n",
     "\n",
     "    frame = yolo_main(frame, process_this_frame, yolo_net)\n",
     "    \n",
-    "    # boxes = make_human_prediction(frame, hog)\n",
-    "    \n",
-    "    # frame = draw_detection_results(frame, boxes)\n",
-    "    \n",
-    "    # detectron_unleashed(frame, detectron_predictor, detectron_cfg, itr)\n",
-    "    cv2.imshow('Video', frame)\n",
+    "    frame = eye_detection_main(frame, eye_net, face_locations, process_this_frame, blob_detect)\n",
+    "    cv2.imshow('video', frame)\n",
     "    #check for unknown entiites and alert user every ~30 seconds ish\n",
     "    if face_names !=[]:\n",
     "        notification_timer = notify_reset_timer(notification_timer, face_names[-1])\n",
@@ -477,14 +564,13 @@
    "source": [
     "## TODO \n",
     "\n",
-    "1. Model for human detection \n",
-    "2. Gaze Detection (pose detection)\n",
-    "3. Consequence addition (notifications ignored)\n",
-    "4. Deranking - lose access\n",
-    "5. Threats - known attacks on opencv\n",
-    "6. lock the screen if main user is not there\n",
-    "7. Possible GUI\n",
-    "8. Build admin backend to keep track"
+    "1. Gaze Detection (pose detection)\n",
+    "2. Consequence addition (notifications ignored)\n",
+    "3. Deranking - lose access\n",
+    "4. Threats - known attacks on opencv\n",
+    "5. lock the screen if main user is not there\n",
+    "6. Possible GUI\n",
+    "7. Build admin backend to keep track"
    ]
   },
   {
@@ -496,9 +582,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-404eb4fe7f38>, line 16)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-404eb4fe7f38>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    video_capture = cv2.VideoCapture(0)a\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#code forked and tweaked from https://github.com/ageitgey/face_recognition/blob/master/examples/facerec_from_webcam_faster.py\n",
     "#to extend, just add more people into the known_people folder\n",
@@ -515,7 +610,7 @@
     "              \"\"\".format(text, title))\n",
     "    \n",
     "# Get a reference to webcam #0 (the default one)\n",
-    "video_capture = cv2.VideoCapture(0)a\n",
+    "video_capture = cv2.VideoCapture(0)\n",
     "\n",
     "#make array of sample pictures with encodings\n",
     "known_face_encodings = []\n",
@@ -657,7 +752,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "589.391px"
+    "width": "614.391px"
    },
    "toc_section_display": true,
    "toc_window_display": true
